--- a/index.html
+++ b/index.html
@@ -6,6 +6,27 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="header" >
+      <ul> 
+        <li>
+            <a href="">Фільми</a>
+        </li>
+        <li>
+            <a href="">Жанри</a>
+        </li>
+        <li>
+            <a href="">Кінозал</a>
+        </li>
+        <li>
+            <a href="">Місто</a>
+        </li>
+        <li>
+            <a href="">Сьогодні</a>
+        </li>
+        <li>
+            <a href="">Оплата</a>
+        </li>
+      </ul>
+    </div>
 </body>
 </html>
