--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="header" >
-      <ul> 
+      <ul class="navigation-list"> 
         <li>
             <a href="">Фільми</a>
         </li>
@@ -25,6 +29,9 @@
         </li>
         <li>
             <a href="">Оплата</a>
+        </li>
+        <li>
+            <a href="">Увійти</a>
         </li>
       </ul>
     </div>
