--- a/index.html
+++ b/index.html
@@ -20,25 +20,25 @@
         </div>
       <ul class="navigation-list">   
         <li>  
-            <a href="">Забронювати</a>
+            <a class="navigation-underline" href="">Забронювати</a>
         </li>
         <li>
-            <a href="">Фільми</a>
+            <a class="navigation-underline" href="">Фільми</a>
         </li>
         <li>
-            <a href="">Жанри</a>
+            <a class="navigation-underline" href="">Жанри</a>
         </li>
         <li>
-            <a href="">Кінозал</a>
+            <a class="navigation-underline" href="">Кінозал</a>
         </li>
         <li>
-            <a href="">Місто</a>
+            <a class="navigation-underline" href="">Місто</a>
         </li>
         <li>
-            <a href="">Сьогодні</a>
+            <a class="navigation-underline" href="">Сьогодні</a>
         </li>
         <li>
-            <a href="">Оплата</a>
+            <a class="navigation-underline" href="">Оплата</a>
         </li>
         <li>
             <a href="">Увійти</a>
