--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    
 </head>
 
 <body>
 
     <header class="header">
+        <a class="menu-btn-link" href="">
       <img class="menu-btn" src="./images/buger-btn.png" alt="Меню" title="Меню">
-         <a href=""> </a>
+        </a>
         <div class="logo-image">
             <a class="logo-link">
                 <svg class="logo-image" width="558" height="31" viewBox="0 0 558 31" fill="none" xmlns="http://www.w3.org/2000/svg">
