--- a/index.html
+++ b/index.html
@@ -53,8 +53,13 @@
     </header>
 
 <main>
-    <image class="background-img" src="./images/background.jpg" alt="Space ship" style="width: 100%; height: auto;">
-
+    <section class="images">
+        <image class="background-img" src="./images/background.jpg" alt="Space ship" style="width: 100%; height: auto;">
+        <img class="overlay-image1" src="./images/0.jpg" alt="rescue from the water" style="width: 20%; height: auto;">
+        <img class="overlay-image2" src="./images/1.jpg" alt="cosmonaut at Mars planet" style="width: 20%; height: auto;">
+        <img class="overlay-image3" src="./images/5.jpg" alt="man climbes down from rock with friends" style="width: 23%; height: auto">
+        <img class="overlay-image4" src="./images/8.jpg" alt="navy plane has just taken its flight and got back to base" style="width: 25%; height: auto;">
+    </section>
 </main>
 
 <footer>
