--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 </head>
 
 <body>
-
     <header class="header">
         <a class="menu-btn-link" href="">
       <img class="menu-btn" src="./images/buger-btn.png" alt="Меню" title="Меню">
@@ -62,9 +61,7 @@
     </section>
 </main>
 
-<footer>
-
-</footer>
+<footer></footer>
 <script src="./script.js"></script>
 </body>
 </html>
