--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
 
 <body>
     <header class="header">
-        <a class="menu-btn-link" href="">
-      <img class="menu-btn" src="./images/buger-btn.png" alt="Меню" title="Меню">
-        </a>
+    <a class="menu-btn-link" href="">
+      <img class="menu-btn" src="./images/buger-btn.png" alt="Меню" title="Меню"></a>
         <div class="logo-image">
             <a class="logo-link">
                 <svg class="logo-image" width="558" height="31" viewBox="0 0 558 31" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -53,15 +52,18 @@
 
 <main>
     <section class="images">
-        <image class="background-img" src="./images/background.jpg" alt="Space ship" style="width: 100%; height: auto;">
+        <image class="background-img" src="./images/background.jpg" alt="Space ship" style="width: 100%; height: 1000px;">
         <img class="overlay-image1" src="./images/0.jpg" alt="rescue from the water" style="width: 20%; height: auto;">
         <img class="overlay-image2" src="./images/1.jpg" alt="cosmonaut at Mars planet" style="width: 20%; height: auto;">
         <img class="overlay-image3" src="./images/5.jpg" alt="man climbes down from rock with friends" style="width: 23%; height: auto">
         <img class="overlay-image4" src="./images/8.jpg" alt="navy plane has just taken its flight and got back to base" style="width: 25%; height: auto;">
     </section>
+    <h4>All Rights Reserved</h4>
 </main>
 
-<footer></footer>
+<footer class="footer">
+
+</footer>
 <script src="./script.js"></script>
 </body>
 </html>
