--- a/index.html
+++ b/index.html
@@ -49,7 +49,64 @@
                 </li>
            </ul>
     </header>
-
+   <div class="form-popup">
+         <div class="form-box login">
+             <div class="form-details">
+                 <h3>Welcome!</h3>
+                 <p>Please login</p>
+             </div>
+             <div class="form-content">
+                 <h2>LOGIN</h2>
+                 <form action="#">
+                    <div class="input-field">
+                        <input type="text">
+                        <label>Email</label>
+                    </div>
+                    <div class="input-field">
+                        <input type="password">
+                        <label>Password</label>
+                    </div>
+                    <a href="#" class="forgot-pass">Forgot password?</a> 
+                    <button class="button" type="submit">Log In</button>
+                 </form>
+                 <div class="button-Enter-link">
+                    Dont have an account?
+                    <a href="#">Sign Up</a>
+                 </div>
+             </div>
+         </div> 
+         <div class="form-box signup">
+            <div class="form-details">
+                <h3>Create Account</h3>
+                <p>To be part of comunity, please sign up</p>
+            </div>
+            <div class="form-content">
+                <h2>SIGNUP</h2>
+                <form action="#">
+                   <div class="input-field">
+                       <input type="text">
+                       <label>Enter your email</label>
+                   </div>
+                   <div class="input-field">
+                       <input type="password">
+                       <label>Create password</label>
+                   </div>
+                   <div class="policy-text">
+                    <input type="checkbox" id="policy">
+                    <label for="policy">
+                        I agree the 
+                        <a href="#"> Terms & Conditions</a>
+                    </label>
+                   </div>
+                   <button class="button" type="submit">Sign Up</button>
+                </form>
+                <div class="button-Enter-link">
+                   Already have an account?
+                   <a href="#">Login</a>
+                </div>
+            </div>
+        </div> 
+    </div>
 <main>
     <section class="images">
         <image class="background-img" src="./images/background.jpg" alt="Space ship" style="width: 100%; height: 1000px;">
